release 0.2 (2007-xx-xx)
- Removed implementation of @SubResources and @UnmatchedPath
- JSON support added to JAXB entity provider for use with "application/json"
  media type. BadgerFish convention is used.
- Views refactored to work correctly in combination with HTTP methods
- removed the @SubResource annotation from the examples
- removed Entity class, equivalent functionality is supported by the 
  javax.ws.rs.core.HttpHeaders class
- Bookmark example added
- include 311 API distribution, src and javadoc
- fixed the formatting of java.util.Date for HTTP-date to conform to RFC 1123
- refactored API/SPI messages
- include jersey API/SPI javadoc
- URIs and URI templates with escaped space character throw exception for URI.create,
  found by Julian Reschke:
  https://jersey.dev.java.net/servlets/ReadMsg?list=dev&msgNo=1 
- include version information in manifest of jersey.jar

release 0.1 (2007-06-19)
- initial stable snapshot